# Steam-Deck-Waker

./: .gitignore  LICENSE  README.md
deck-side/: README.md  btwake.sh  deck-bt-wake.service  install.sh
deck-side/battery/: README.md  install-battery.sh  sdbattery.py
esphome/: README.md  secrets.yaml.example  steamdeck-waker.yaml
esphome/components/ble_keyboard/: CMakeLists.txt  Kconfig.projbuild  __init__.py  automation.h  ble_keyboard.cpp  ble_keyboard.h  button.cpp  button.h  const.py  esp_hid_gap.c  esp_hid_gap.h
esphome/upstream-examples/: esp32.yaml  esp32c3.yaml
homeassistant/: README.md  wake_on_tv_input.automation.yaml  wake_steam_deck.script.yaml
